--- a/homework/2020-10-08/styles/main.css
+++ b/homework/2020-10-08/styles/main.css
@@ -1,7 +1,14 @@
+.container123 {
+    height: 720px;
+    width: 100%;
+    background-color:rgba(169, 169, 169, 0.178);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 button {
     width: 120px; 
     height:45px;
-    
     text-align: center;
     border: 0px;
     border-radius: 5px;
