--- a/classwork/2020-10-10/styles/main.css
+++ b/classwork/2020-10-10/styles/main.css
@@ -1,10 +1,18 @@
-.main {
-  display: block;
-  width: 400px; 
-  height:40px;
-  margin-bottom: 1px;
-  background-image: linear-gradient(to right, yellow 0 50px, brown 50px 100px, yellow 100px 150px, brown 150px 200px, yellow 200px 250px, brown 250px 300px, yellow 300px 350px, brown 350px 400px);
-} 
-.main:nth-child(2n) {
-  background-image: linear-gradient(to right, brown 0 50px, yellow 50px 100px, brown 100px 150px, yellow 150px 200px, brown 200px 250px, yellow 250px 300px, brown 300px 350px, yellow 350px 400px);
+button{
+  width: 120px; 
+  height:45px;
+  text-align: center;
+  color: white;
+  border: 0px;
+  border-radius: 10px;
+  background-color: green;
+}
+button ~ button {
+  width: 120px; 
+  height:45px;
+  text-align: center;
+  color: white;
+  border: 0px;
+  border-radius: 10px;
+  background-color: red;
 }
