--- a/classwork/2020-10-10/styles/main.css
+++ b/classwork/2020-10-10/styles/main.css
@@ -1,18 +1,19 @@
-button{
-  width: 120px; 
-  height:45px;
-  text-align: center;
-  color: white;
-  border: 0px;
-  border-radius: 20px;
-  background-color: green;
+html, body { 
+  height: 100%;
+  width: 100%;
+  background-image: url(../images/wer.jpeg);
 }
-button ~ button {
-  width: 120px; 
-  height:45px;
-  text-align: center;
-  color: white;
-  border: 0px;
-  border-radius: 20px;
-  background-color: red;
+.div1 {
+  height: 70%;
+  width: 70%;
+  border: 1px solid black;
+  position: relative;
+  }
+.div2 {
+  height: 50%;
+  width: 70%;
+  border:1px solid blueviolet;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
