--- a/classwork/2020-10-12/styles/main.css
+++ b/classwork/2020-10-12/styles/main.css
@@ -1,19 +1,20 @@
-html, body { 
-  height: 100%;
-  width: 100%;
-  background-image: url(../images/wer.jpeg);
+body {
+  height: 100px;
+  
 }
-.div1 {
-  height: 70%;
-  width: 70%;
-  border: 1px solid black;
-  position: relative;
-  }
-.div2 {
-  height: 50%;
-  width: 70%;
-  border:1px solid blueviolet;
-  margin: auto;
+div {
+  border: 1px solid green;
+  padding: 5px;
+  margin: 5px 5px;
+  width: 100px;
+  height: 50px;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 10px;
+  left: 10px;
+  
+}
+div + div {
+  position: absolute;
+  top: 40px;
+  left: 130px;
 }
