--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -3,9 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 .main {
- background: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 412px, rgb(221, 236, 250) 412px,rgb(221, 236, 250) 415px, rgb(50, 125, 173) 415px,  rgb(50, 125, 173) 422px,  rgb(38, 107, 151) 422px, rgb(38, 107, 151) 750px);
+ background: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 371px, rgb(221, 236, 250) 371px,rgb(221, 236, 250) 374px, rgb(50, 125, 173) 375px,  rgb(50, 125, 173) 382px,  rgb(38, 107, 151) 382px, rgb(38, 107, 151) 750px);
   height: 750px;
   position: relative;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
 .clouds {
   position: relative;
@@ -15,12 +19,17 @@
 }
 .clouds > div {
   position: absolute;
+  margin: 0 auto;
 }
 .cloud1 {
-  left:-220px;
+  width: 160px;
+  height: 70px;
+  left:-190px;
 }
 .cloud2 {
-  right:-297px;
+  width: 300px;
+  height: 70px;
+  right:-220px;
 }
 .comingsoon {
   position: relative;
@@ -29,6 +38,7 @@
   height: 80px;
   color: white;
   margin: 0 auto;
+  top: -45px;
   text-shadow: 1px 2px 0px rgba(0,0,0,0.17);
 }
 .comingsoon > div {
@@ -46,6 +56,7 @@
   height: 20px;
   color:rgb(38, 107, 151);
   margin: 0 auto;
+  top: -40px;
 }
 .subscribe > div {
   position: absolute;
@@ -61,6 +72,7 @@
   font-family: 'Lato', sans-serif;
   width: 600px;
   height: 55px;
+  top: -41px;
 }
 .form > div:first-child {
   position: absolute;
@@ -107,6 +119,7 @@
   font-family: 'Lato', sans-serif;
   width: 600px;
   height: 400px;
+  top: -42px;
 }
 .footer > div:first-child {
   width: 38px;
@@ -125,10 +138,6 @@
 .image {
   width: 410px;
   height: 390px;
-}
-img {
-  max-width: 100%;
-  max-height: 100%;
 }
 .numbers {
   position: absolute;
