--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap%27');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
-.main {
- background: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 371px, rgb(221, 236, 250) 371px,rgb(221, 236, 250) 374px, rgb(50, 125, 173) 375px,  rgb(50, 125, 173) 382px,  rgb(38, 107, 151) 382px, rgb(38, 107, 151) 750px);
-  height: 750px;
-  position: relative;
+body {
+  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 371px, rgb(221, 236, 250) 371px,rgb(221, 236, 250) 374.5px, rgb(50, 125, 173) 374.5px,  rgb(50, 125, 173) 382px,  rgb(38, 107, 151) 382px, rgb(38, 107, 151) 750px);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 img {
   max-width: 100%;
@@ -15,21 +15,21 @@ img {
   position: relative;
   width: 200px;
   margin: 0 auto;
-  height: 108px;
+  height: 63px;
 }
 .clouds > div {
   position: absolute;
   margin: 0 auto;
 }
 .cloud1 {
-  width: 160px;
+  width: 161px;
   height: 70px;
-  left:-190px;
+  left:-187px;
 }
 .cloud2 {
-  width: 300px;
+  width: 299px;
   height: 70px;
-  right:-220px;
+  right:-217px;
 }
 .comingsoon {
   position: relative;
@@ -38,15 +38,17 @@ img {
   height: 80px;
   color: white;
   margin: 0 auto;
-  top: -45px;
-  text-shadow: 1px 2px 0px rgba(0,0,0,0.17);
+  text-shadow: 2px 2px 0px rgba(0,0,0,0.17);
 }
 .comingsoon > div {
   position: absolute;
-  font-size: 3.3rem;
-  line-height: 90px;
-  left:102px;
-  letter-spacing: 3.5px;
+  font-size: 3.38rem;
+  line-height: 94.4px;
+  left:103px;
+  letter-spacing: 1.7px;
+}
+span {
+  letter-spacing: 4.4px;
 }
 .subscribe {
   position: relative;
@@ -56,44 +58,54 @@ img {
   height: 20px;
   color:rgb(38, 107, 151);
   margin: 0 auto;
-  top: -40px;
+  top: 4px;
 }
 .subscribe > div {
   position: absolute;
-  font-weight: 100;
   font-size: 11px;
   line-height: 1;
-  left:185px;
-  letter-spacing: 0.2px;
+  left:186px;
+  letter-spacing: 0.11px;
 }
 .form {
   position: relative;
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
+  font-size: 0.7rem;
   width: 600px;
   height: 55px;
-  top: -41px;
+  top: 4px;
 }
-.form > div:first-child {
+.form input[type=text] {
   position: absolute;
-  background-image: -webkit-linear-gradient(90deg, rgb(240,240,240) 0%, rgb(248, 245, 245) 100%);
-  box-shadow: 0px 1px 0px 0px rgba(212, 209, 209, 0.004),inset 0px 2px 2px 0px rgba(245, 243, 241, 0.1);
-  width: 193px;
-  height: 30px;
+  border: none;
   border-radius: 2px;
-  top: 7px;
-  left: 164px;
+  background-image: -webkit-linear-gradient(90deg, rgb(240,240,240) 0%, rgb(235, 235, 235) 100%);
+  box-shadow: inset 0px 0.9px 2px 0.7px rgba(29, 26, 22, 0.2);
+  padding-left: 8px;
+  padding-top: 1.4px;
+  left: 163px;
+  top: 6.2px;
+  width: 182px;
+  height: 29px;
+  outline: none;
+  font-size: 7.5pt;
 }
-.form > div:nth-child(2) {
+.form button {
   position: absolute;
-  background-image: linear-gradient(to top, rgb(247, 175, 31), rgb(247, 216, 81));
+  background-image: -webkit-linear-gradient(90deg, rgb(250, 170, 34) 20%, rgb(247, 200, 59) 100%);
   border-radius: 2px;
-  line-height: 1.9;
   color: white;
-  width: 74px;
-  height: 30px;
+  padding-top: 1.4px;
+  left: 363px;
   top: 7px;
-  right: 163px;
+  width: 74px;
+  height: 29px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  letter-spacing: 0px;
+  outline: none;
 }
 .inputfield > div {
   position: absolute;
@@ -118,84 +130,81 @@ img {
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
   width: 600px;
-  height: 400px;
-  top: -42px;
+  height: 500px;
+  top: 3px;
 }
 .footer > div:first-child {
-  width: 38px;
-  height: 38px;
+  width: 38.5px;
+  height: 38.5px;
   position: absolute;
-  top: 140px;
-  left:149px;
+  top: 140.3px;
+  left:148.9px;
 }
 .footer > div:nth-child(2) {
-  width: 410px;
-  height: 390px;
+  width: 415px;
+  height: 415px;
   position: absolute;
   top: 2px;
-  left:170px;
+  left:169px;
 }
 .image {
   width: 410px;
-  height: 390px;
+  height: 392px;
 }
 .numbers {
   position: absolute;
-  top: 200px;
-  left: 4px;
+  top: 200.7px;
+  left: 5px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 18px;
   width: 300px;
   height: 80px;
   margin: 0 auto;
   text-align: center;
 }
 .numbers > div:nth-child(2n-1) {
-  width: 55px;
-  height: 55px;
-  line-height: 3;
-  font-size: 20px;
+  width: 56px;
+  height: 56px;
+  line-height: 3.17;
   color: rgb(38, 107, 151);
   background-color: rgb(185,214,239);
   border-radius: 50%;
-
 }
 .days {
   position: absolute;
-  top: 0px;
-  left: 10px;
+  left: 9.2px;
 }
 .hours {
   position: absolute;
-  top: 0px;
-  left: 100px;
+  left: 99.7px;
+  letter-spacing: 0.4px;
 }
 .mins {
   position: absolute;
-  top: 0px;
-  left: 188px;
+  left: 186.9px;
 }
 .numbers > div:nth-child(2n) {
-  top: 62px;
+  top: 61px;
   color: white;
   width: 50px;
   height: 20px;
   font-family: 'Lato', sans-serif;
-  font-size: 18px;
-  
+  font-size: 17.6px;
   line-height: 1.143;
   font-weight: 700;
 }
 .word1 {
   position: absolute;
-  top: 62px;
   left: 12px;
+  letter-spacing: 1.2px;
 }
 .word2 {
   position: absolute;
-  top: 62px;
-  left: 95px;
+  left: 93.7px;
+  letter-spacing: 1.2px;
 }
 .word3 {
   position: absolute;
-  top: 62px;
-  left: 190px;
+  left: 189.5px;
+  letter-spacing: 0.8px;
 }
