--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -2,14 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap%27');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
-body {
-  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 371px, rgb(221, 236, 250) 371px,rgb(221, 236, 250) 374.5px, rgb(50, 125, 173) 374.5px,  rgb(50, 125, 173) 382px,  rgb(38, 107, 151) 382px, rgb(38, 107, 151) 750px);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+html, body {
+  height: 100%;
 }
-img {
-  max-width: 100%;
-  max-height: 100%;
+body {
+  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151) 720px);
+  background-repeat: no-repeat;
 }
 .clouds {
   position: relative;
@@ -22,133 +20,131 @@ img {
   margin: 0 auto;
 }
 .cloud1 {
-  width: 161px;
-  height: 70px;
-  left:-187px;
+  width: 200.5px;
+  height: 67px;
+  left:-258.7px;
 }
 .cloud2 {
-  width: 299px;
-  height: 70px;
-  right:-217px;
+  width: 373.5px;
+  height: 71px;
+  right:-295.5px;
 }
 .comingsoon {
   position: relative;
   font-family: 'Raleway', sans-serif;
-  width: 600px;
-  height: 80px;
+  width: 700px;
+  height: 110px;
   color: white;
   margin: 0 auto;
-  text-shadow: 2px 2px 0px rgba(0,0,0,0.17);
 }
 .comingsoon > div {
   position: absolute;
-  font-size: 3.38rem;
-  line-height: 94.4px;
+  font-size: 4.32rem;
+  line-height: 149.3px;
   left:103px;
-  letter-spacing: 1.7px;
+  text-shadow: 2.5px 3px 0px rgba(0,0,0,0.17);
+  letter-spacing: 1.1px;
 }
 span {
-  letter-spacing: 4.4px;
+  letter-spacing: 4.5px;
 }
 .subscribe {
   position: relative;
   font-family: 'Lato', sans-serif;
   text-shadow: 0px 4px 0px rba(0,0,0,0.17);
-  width: 600px;
-  height: 20px;
+  width: 700px;
+  height: 30px;
   color:rgb(38, 107, 151);
   margin: 0 auto;
-  top: 4px;
 }
 .subscribe > div {
   position: absolute;
-  font-size: 11px;
-  line-height: 1;
-  left:186px;
-  letter-spacing: 0.11px;
+  font-size: 14px;
+  line-height: 2.6;
+  left:206.4px;
 }
 .form {
   position: relative;
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
-  width: 600px;
+  width: 700px;
   height: 55px;
-  top: 4px;
   border: none;
   border-radius: 2px;
-  outline: none;
 }
 .form input[type=text] {
   position: absolute;
   background-image: -webkit-linear-gradient(90deg, rgb(240,240,240) 0%, rgb(235, 235, 235) 100%);
-  box-shadow: inset 0px 0.9px 2px 0.7px rgba(29, 26, 22, 0.2);
-  padding-left: 10px;
-  padding-top: 1.4px;
-  left: 163px;
-  top: 6.2px;
-  width: 180.5px;
-  height: 29px;
-  font-size: 7.4pt;
+  box-shadow: inset 0.3px 1.3px 4px 0.9px rgba(29, 26, 22, 0.2);
+  padding-left: 11.6px;
+  padding-top: 0.6px;
+  left: 178.7px;
+  top: 13.9px;
+  width: 226.5px;
+  height: 37px;
+  font-size: 9pt;
   border: none;
-  border-radius: 2.5px;
-  letter-spacing: 0.1px;
+  border-radius: 3px;
+  letter-spacing: 0.3px;
 }
 .form button {
   position: absolute;
-  background-image: -webkit-linear-gradient(90deg, rgb(250, 170, 34) 20%, rgb(247, 200, 59) 100%);
+  background-image: -webkit-linear-gradient(90deg, rgb(243, 159, 13) 20%, rgb(247, 200, 59) 100%);
+  box-shadow: inset 0px 1px 0px 0px rgb(247, 170, 39);
   color: white;
-  padding-top: 2px;
+  padding-top: 2.5px;
+  letter-spacing: 0.2px;
   line-height: 1px;
-  left: 362.8px;
-  top: 7px;
-  width: 74px;
-  height: 29px;
+  left: 429px;
+  top: 14.1px;
+  width: 92px;
+  height: 36.6px;
   font-weight: 600;
-  font-size: 8pt;
+  font-size: 10pt;
   cursor: pointer;
   border: none;
-  border-radius: 2px;
+  border-radius: 3px;
 }
-.footer {
+.content {
   position: relative;
   margin: 0 auto;
   font-family: 'Lato', sans-serif;
-  width: 600px;
-  height: 500px;
-  top: 3px;
+  width: 700px;
+  height: 510px;
 }
-.footer > div:first-child {
-  width: 38.5px;
-  height: 38.5px;
+.content > div:first-child {
+  width: 50px;
+  height: 50px;
   position: absolute;
-  top: 140.3px;
-  left:148.9px;
+  top: 194px;
+  left:160.5px;
 }
-.footer > div:nth-child(2) {
-  width: 415px;
-  height: 415px;
+.content > div:nth-child(2) {
+  width: 420px;
+  height: 490px;
   position: absolute;
-  top: 2px;
-  left:169px;
+  top: 21px;
+  left:185.8px;
+  z-index: 1;
 }
 .image {
-  width: 410px;
-  height: 392px;
+  width: 510px;
+  height: 492px;
 }
 .numbers {
   position: absolute;
-  top: 200.7px;
-  left: 5px;
+  top: 250.7px;
+  left: 9px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 18px;
+  font-size: 22.5px;
   width: 300px;
-  height: 80px;
+  height: 130px;
   margin: 0 auto;
   text-align: center;
 }
 .numbers > div:nth-child(2n-1) {
-  width: 56px;
-  height: 56px;
+  width: 70px;
+  height: 70px;
   line-height: 3.17;
   color: rgb(38, 107, 151);
   background-color: rgb(185,214,239);
@@ -156,39 +152,46 @@ span {
 }
 .days {
   position: absolute;
-  left: 9.2px;
+  left: 9.1px;
 }
 .hours {
   position: absolute;
-  left: 99.7px;
+  left: 122px;
   letter-spacing: 0.4px;
 }
 .mins {
   position: absolute;
-  left: 186.9px;
+  left: 230.9px;
 }
 .numbers > div:nth-child(2n) {
-  top: 61px;
+  top: 75.7px;
   color: white;
   width: 50px;
   height: 20px;
   font-family: 'Lato', sans-serif;
-  font-size: 17.6px;
-  line-height: 1.143;
+  font-size: 22px;
+  line-height: 1.243;
   font-weight: 700;
 }
 .word1 {
   position: absolute;
-  left: 12px;
-  letter-spacing: 1.2px;
+  left: 13px;
+  letter-spacing: 1.7px;
 }
 .word2 {
   position: absolute;
-  left: 93.7px;
-  letter-spacing: 1.2px;
+  left: 114px;
+  letter-spacing: 1.9px;
 }
 .word3 {
   position: absolute;
-  left: 189.5px;
-  letter-spacing: 0.8px;
+  left: 236px;
+  letter-spacing: 0.3px;
+}
+.footer {
+  position: absolute;
+  top: 750px;
+  width: 100%;
+  height: 20px;
+  background-color: rgb(38, 107, 151);
 }
