--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -2,12 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap%27');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
-html, body {
-  height: 100%;
+body {
+  height: 100vh;
 }
 body {
-  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151) 720px);
-  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151)720px);
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
 .clouds {
   position: relative;
@@ -51,7 +54,6 @@ span {
 .subscribe {
   position: relative;
   font-family: 'Lato', sans-serif;
-  text-shadow: 0px 4px 0px rba(0,0,0,0.17);
   width: 700px;
   height: 30px;
   color:rgb(38, 107, 151);
@@ -190,8 +192,10 @@ span {
 }
 .footer {
   position: absolute;
-  top: 750px;
+  top: 0px;
   width: 100%;
-  height: 20px;
-  background-color: rgb(38, 107, 151);
+  height: 780px;
+  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151)720px);
+  background-repeat: no-repeat;
+  z-index: -1;
 }
