--- a/classwork/2020-10-24/styles/main.css
+++ b/classwork/2020-10-24/styles/main.css
@@ -1,5 +1,10 @@
 body {
     height: 100%;
+    background-color: #E5E5E5;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 .header {
     width: 1920px;
@@ -8,19 +13,429 @@ body {
     background-image: url(../images/back.png);
     background-size: cover;
     position: relative;
-    /* border: 1px solid green; */
 }
-img {
-    max-width: 100%;
-    max-height: 100%;
+pre {
+    margin: 0;
 }
-.menu1 {
-    width: 100%;   
+.currency {
+    width: 1155px;
+    height: 35px;
+    margin: 0 auto;
+    color: white;
+    position: relative;
 }
 .info {
     position: absolute;
-    height: 18px;
     width: 642px;
-    left: 389px;
-    border-radius: nullpx;
+    top: 6px;
 }
+.language {
+    position: absolute;
+    width: 91px;
+    right: 0px;
+    top: 6px;
+}
+.line {
+    position: relative;
+    width: 1155px;
+    height: 1px;
+    left: 389px;
+    background: rgba(244, 244, 249, 0.5);
+}
+.menu {
+    width: 1155px;
+    height: 90px;
+    margin: 0 auto;
+    color: white;
+    position: relative;
+}
+.pool {
+    position: absolute;
+    top: 30px;
+    left: 60px;
+    font-size: 23px;
+}
+.pool:before {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: -53px;
+    width: 40.95px;
+    height: 41px;
+    background-image: url(../images/Sum2.png);
+    background-size: contain;
+    border-radius: 15%;
+}
+.btc {
+    width: 105px;
+    height: 35px;
+    position: absolute;
+    top: 27px;
+    left: 265px;
+    border: 1.5px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+.btc-text {
+    position: absolute;
+    left: 43px;
+    top: 9px;
+    font-size: 13px;
+}
+.btc-text::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -27px;
+    width: 16px;
+    height: 16px;
+    background-image: url(../images/coin.png);
+}
+.btc-text::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 37px;
+    width: 5px;
+    height: 5px;
+    background-image: url(../images/triangle2.png);
+}
+.nav {
+    position: relative;
+    width: 555px;
+    height: 38px;
+    font-size: 15px;
+    top: 35px;
+    left: 419px;
+}
+.nav > div {
+    position: relative;
+    width: 80px;
+    height: 38px;
+    display: inline-block;
+    margin-right: 7px;
+}
+.nav > div:nth-child(2) > div:first-child {
+    padding-left: 9px;
+    letter-spacing: 0.7px;
+}
+.nav > div:nth-child(3) > div:first-child {
+    padding-left: 14px;
+    letter-spacing: 0.4px;
+}
+.nav > div:nth-child(4) > div:first-child {
+    padding-left: 37px;
+    letter-spacing: 0.4px;
+}
+.nav > div:nth-child(5) > div:first-child {
+    padding-left: 26px;
+    letter-spacing: 0.3px;
+}
+.nav > div:nth-child(6) > div:first-child {
+    padding-left: 36px;
+    letter-spacing: 0.5px;
+}
+.nav > div > div:last-child {
+    visibility: hidden;
+}
+.nav > div:first-child > div:last-child {
+    visibility: visible;
+}
+.nav > div > div:first-child {
+    padding-left: 6px;
+    letter-spacing: 1px;
+}
+.line2 {
+    position: absolute;
+    top: 25px;
+    left: -1px;
+    width: 73px;
+    height: 2px;
+    background: #FFFFFF;
+}
+.nav a {
+    font-size: 15px;
+    color: white;
+    text-decoration: none;
+}
+.nicko {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(42, 28, 117, 1);
+    width: 157px;
+    height: 35px;
+    right: -7px;
+    top: 26px;
+    background: #FFFFFF;
+    border-radius: 5px;
+}
+.nicko::before {
+    content: "";
+    position: absolute;
+    top: 11px;
+    left: 20px;
+    width: 11px;
+    height: 12px;
+    background-image: url(../images/nicko1.png);
+}
+.nicko::after {
+    content: "";
+    position: absolute;
+    top: 16px;
+    right: 18px;
+    width: 5px;
+    height: 5px;
+    background-image: url(../images/nicko2.png);
+}
+.mainheader {
+    height: 545px;
+    width: 1155px;
+    margin: 0 auto;
+    position: relative;
+}
+.textpart {
+    width: 620px;
+    position: absolute;
+    top: 102px;
+    left: 5px;
+}
+.textpart h1 {
+    font-family: Google Sans;
+    font-size: 28px;
+    line-height: 36px;
+    letter-spacing: 0.045em;
+    color: #FFFFFF;
+}
+.textpart p {
+    font-family: Proxima Nova;
+    font-size: 15px;
+    line-height: 24px;
+    letter-spacing: 0.062em;
+    color: #FFFFFF;
+}
+.mainheader button {
+    position: absolute;
+    width: 223px;
+    height: 42px;
+    top: 375px;
+    left: 6px;
+    background: #FFFFFF;
+    border: 1.5px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 21px;
+}
+.lap-img {
+  position: absolute;
+  top: 35px;
+  right: -77px;
+  width: 629px;
+  height: 496px;
+  background-image: url(../images/lap-img.png);
+}
+.lines {
+    height: 10px;
+    width: 1155px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.long {
+    position: absolute;
+    width: 57px;
+    height: 3px;
+    left:533.5px;
+    top: 2px;
+    background: #FFFFFF;
+}
+.short1 {
+    position: absolute;
+    width: 15px;
+    height: 3px;
+    left:599px;
+    top: 2px;
+    background: rgba(255, 255, 255, 0.6);
+}
+.short2 {
+    position: absolute;
+    width: 15px;
+    height: 3px;
+    left:623px;
+    top: 2px;
+    background: rgba(255, 255, 255, 0.6);
+}
+.main-content1 {
+    height: 400px;
+    width: 1920px;
+    border: 1px solid black;
+    margin: 0 auto;
+    position: relative;
+   /*  display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+.bitcoin {
+    position: absolute;
+    width: 346px;
+    height: 436px;
+    left: 389px;
+    top: -88.5px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 35px #D5D5E3;
+    border-radius: 5px;
+}
+.bitcoin > div {
+    margin: 0 auto;
+    width: 276px;
+    left: 34px;
+}
+.bitcoin-block {
+    position: absolute;
+    height: 42px;
+    top: 26px;
+    border: 1px solid green;
+    font-family: Google Sans;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 31px;
+    color: #333333;
+    padding-left: 42px;
+}
+.bitcoin-block::before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 0px;
+    width: 30px;
+    height: 30px;
+    background-image: url(../images/coin.png);
+    background-size: contain;
+}
+.text-block {
+    position: absolute;
+    height: 175px;
+    top: 72px;
+    border: 1px solid green;
+    padding-top: 10px;
+}
+.row {
+    width: 276px;
+    position: relative;
+    margin-bottom: 5px;
+    display: flex;
+}
+.row > div:nth-child(2) {
+    position: absolute;
+    left: 150px;
+}
+.row:nth-child(2n) {
+    font-family: Proxima Nova;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 24px;
+    color: #333333;
+}
+.row:nth-child(1) > div {
+    position: absolute;
+    top: -1px;
+}
+.row:nth-child(2) > div {
+    position: absolute;
+    top: 12px;
+}
+.row:nth-child(3) > div {
+    position: absolute;
+    top: 46px;
+}
+.row:nth-child(4) > div {
+    position: absolute;
+    top: 60px;
+}
+.row:nth-child(5) > div {
+    position: absolute;
+    top: 94px;
+}
+.row:nth-child(5) > div:nth-child(2) {
+    position: absolute;
+    top: 114px;
+    left: 0px;
+    font-family: Proxima Nova;
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 24px;
+    color: #333333;
+}
+.lnk-block {
+    position: absolute;
+    height: 45px;
+    top: 253px;
+    border: 1px solid green;
+}
+.lnk-block a {
+    color: #2F80ED;
+    text-decoration: none;
+}
+.lnk-block a:after {
+    content: "";
+    width: 6px;
+    height: 9px;
+    position: absolute;
+    left: 146px;
+    top: 6px;
+    background-image: url(../images/chevron.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.btn-block {
+    position: absolute;
+    height: 110px;
+    top: 294px;
+    border: 1px solid green;
+    display: block;
+    margin: 20px auto;
+}
+.btn-block button:first-child {
+    position: absolute;
+    padding: 12px 88px 12px 88px;
+    font-size: 15px;
+    width: 276px;
+    height: 42px;
+    top: 8px;
+    color: white;
+    background: linear-gradient(58.78deg, #2A1C75 -599.37%, #5639B7 81.13%);
+    border-radius: 5px;
+}
+.btn-block button:last-child {
+    position: absolute;
+    padding: 12px 88px 12px 88px;
+    font-size: 15px;
+    width: 276px;
+    height: 42px;
+    top: 62px;
+    border: 1px solid #2A1C75;
+    border-radius: 5px;
+}
+.litecoin {
+    position: absolute;
+    width: 346px;
+    height: 436px;
+    left: 793px;
+    top: -88.5px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 35px #D5D5E3;
+    border-radius: 5px;
+}
+.dash {
+    position: absolute;
+    width: 346px;
+    height: 436px;
+    left: 1198px;
+    top: -88.5px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 35px #D5D5E3;
+    border-radius: 5px;
+}
+
