--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -2,11 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap%27');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
-body {
-  height: 100vh;
+html {
+  min-height: 100%;
 }
 body {
-  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151)720px);
+  min-height: 780px;
+  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151)780px);
 }
 img {
   max-width: 100%;
@@ -189,13 +190,4 @@ span {
   position: absolute;
   left: 236px;
   letter-spacing: 0.3px;
-}
-.footer {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  height: 780px;
-  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 464px, rgb(221, 236, 250) 464px,rgb(221, 236, 250) 468px, rgb(50, 125, 173) 468px,  rgb(50, 125, 173) 477px,  rgb(38, 107, 151) 477px, rgb(38, 107, 151)720px);
-  background-repeat: no-repeat;
-  z-index: -1;
 }
