--- a/homework/2020-10-19/styles/main.css
+++ b/homework/2020-10-19/styles/main.css
@@ -3,12 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet');
 html {
-  min-height: 100%;
+  min-height: 100vh;
 }
 body {
-  min-height: 780px;
-  background-image: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 30.22vw, rgb(221, 236, 250) 30.22vw,rgb(221, 236, 250) 30.45vw, rgb(50, 125, 173) 30.45vw,  rgb(50, 125, 173) 31.03vw,  rgb(38, 107, 151) 31.03vw, rgb(38, 107, 151)50.715vw);
-  width: 100%;
+  background: linear-gradient(to bottom,rgb(185,214,239) 0, rgb(185,214,239) 30.22vw, rgb(221, 236, 250) 30.22vw,rgb(221, 236, 250) 30.45vw, rgb(50, 125, 173) 30.45vw,  rgb(50, 125, 173) 31.03vw,  rgb(38, 107, 151) 31.03vw, rgb(38, 107, 151)50.715vw);
+  min-height: 50.715vw;
+  background-color:rgb(38, 107, 151);
 }
 img {
   max-width: 100%;
