--- a/classwork/2020-11-02/styles/main.css
+++ b/classwork/2020-11-02/styles/main.css
@@ -12,10 +12,10 @@ body {
   border-radius: 0%;
   opacity: 0;
   transform: rotate(0deg);
-  transition: opacity 0.5s ease 0s,
-              border 0.5s ease 0.3s,
-              border-radius 0.5s ease 0.6s,
-              transform 0.5s ease 0.9s;           
+  transition: opacity 1s ease 0s,
+              border 1s ease 0.5s,
+              border-radius 1s ease 0.6s,
+              transform 1s ease-in-out 0.9s;           
 }
 .picture:hover {
   opacity: 1;
